; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_terminal-util.c_getenv_terminal_is_dumb.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_terminal-util.c_getenv_terminal_is_dumb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"TERM\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"dumb\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @getenv_terminal_is_dumb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @getenv_terminal_is_dumb() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i8*, align 8
  %3 = call i8* @getenv(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  store i8* %3, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = icmp ne i8* %4, null
  br i1 %5, label %7, label %6

6:                                                ; preds = %0
  store i32 1, i32* %1, align 4
  br label %10

7:                                                ; preds = %0
  %8 = load i8*, i8** %2, align 8
  %9 = call i32 @streq(i8* %8, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  store i32 %9, i32* %1, align 4
  br label %10

10:                                               ; preds = %7, %6
  %11 = load i32, i32* %1, align 4
  ret i32 %11
}

declare dso_local i8* @getenv(i8*) #1

declare dso_local i32 @streq(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
